# SPO_Interactive_System

./: README.md
Controler/band/: platformio.ini
Controler/band/src/: display.h  enroll.cpp  enroll.h  finger_main.cpp  fingerprint.cpp  fingerprint.h  main.cpp  serial.h  storage.h  wireless.h
Controler/dispenser/: platformio.ini
Controler/dispenser/src/: fingerprint.cpp  fingerprint.h  main.cpp  motor.cpp  scale_HX711.h  serial.h  wireless.h
Controler/shared/: structures.h
Dispenser/: platformio.ini
Dispenser/src/dispenser_kits/: fingerprint.cpp  fingerprint.h  motor.cpp  motor.h  scale_HX711.cpp
Dispenser/src/main/: main.cpp
Dispenser/src/wifi/: mac_address.h  receiver.cpp  receiver.h  sender.cpp  sender.h
Medband-Companion/: .gitignore  Cargo.toml  Dioxus.toml  index.html
Medband-Companion/src/: main.rs  structs.rs
Medband-Companion/src/components/: calendar.rs  dosage.rs
